--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "@mui/styled-engine-sc": "^5.4.1",
+    "animate.css": "^4.1.1",
+    "axios": "^0.26.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
