--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@mui/styled-engine-sc": "^5.4.1",
     "animate.css": "^4.1.1",
     "axios": "^0.26.0",
+    "firebase": "^9.6.6",
+    "mongoose": "^6.2.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.2",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2"
   },
